<resources>
    <string name="app_name">Leaf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="slogan">Let\'s Save\nThe\nPlants</string>
    <string name="sign_in">Sign In</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Sign_In_With_Google">Sign in with Google</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_an_account">already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_plants">My Plants</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="disclaimer">*The plant is auto diagnosed, so some results might be not accurate for rare plants</string>
    <string name="overview">Overview</string>
    <string name="treatment">Treatment</string>
    <string name="cause">Cause</string>
    <string name="symptom">Symptoms</string>
    <string name="like_button">Like button image</string>
    <string name="share_button">Share Button</string>
    <string name="the_post_picture">The Post picture</string>
    <string name="all">All</string>
    <string name="care">care</string>
    <string name="landscape">landscape</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="plant_or_topic">plant or topic</string>
    <string name="welcome_back">Welcome back</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="profile_title">Together we can\nmake difference</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="onBoarding1_txt">Enter the plant image</string>
    <string name="first_screen_description">You can capture images of plants by yourself or just pick a saved image of the required plant to check its health condition.</string>
    <string name="onBoarding2_txt">Guide to cure plants</string>
    <string name="second_screen_description">If the plant is diseased, you will know the disease type and will be provided with essential tips to know how to cure your plant</string>
    <string name="onBoarding3_txt">Broaden your knowledge</string>
    <string name="third_screen_description">You can follow the latest posts to learn more and search for diseases you want to know more about</string>
    <string name="back_btn">Back button</string>
    <string name="language_screen">Take care of the earth and she will take care of you.</string>
    <string name="choose_lang">Choose your language</string>
    <string name="arabic">عربي</string>
    <string name="english">English</string>
    <string name="sign_in_with_phone_number">Sign In With Phone Number</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="invalid_credentials">invalid username or password</string>
    <string name="complete_profile">You can complete your data on profile page</string>
    <string name="mail_exists">E-mail already exists</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="camera_granted">camera permission granted</string>
    <string name="camera_denied">camera permission denied</string>
    <string name="invalid_pass">Invalid Password</string>
    <string name="all_diseases">All Diseases</string>
    <string name="language">Language</string>
    <string name="healthy">healthy</string>
    <string name="or">Or</string>
    <string name="no_data_for_these_plants_yet">No data for these plants yet</string>
    <string name="not_plant">This doesn\'t look like a plant !</string>
    <string name="add_post">Add Post</string>
    <string name="delete_post" translatable="false">Delete Post</string>
    <string name="not_channel_id" translatable="false">channelId</string>
    <string name="about_us_text">Welcome to our plant disease detection app! Our app was created to help farmers, gardeners, and anyone else who cares about plants to easily identify and diagnose plant diseases.</string>
    <string name="different_way_to_communicate">Need a different way to communicate?</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>


</resources>