<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_green"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_fill0_wght500_grad200_opsz48"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_7sdp"
            android:src="@drawable/ic_logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/square_shape"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                style="@style/text_style_b25"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name_edit_text"
                    style="@style/edit_text_style"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

                <EditText
                    android:id="@+id/email_edit_text"
                    style="@style/edit_text_style"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>

                <EditText
                    android:id="@+id/subject_edit_text"
                    style="@style/edit_text_style"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject"/>

                <EditText
                    android:id="@+id/message_edit_text"
                    style="@style/edit_text_style"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_width="match_parent"
                    android:minHeight="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/message"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/primary_btn_style"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/dark_green"
                    android:layout_alignParentEnd="true"
                    app:cornerRadius="@dimen/_10sdp"
                    android:text="@string/submit"/>
            </RelativeLayout>

        </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>