<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".ui.auth.LoginFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight=".25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                style="@style/text_style_w25"
                android:layout_weight="1"
                android:text="@string/slogan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:src="@drawable/ic_loginvec" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/square_shape"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView2"
                style="@style/text_style_b25"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/googleSignInBtnId"
                style="@style/second_btn_style"
                android:layout_marginTop="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_google"
                android:text="@string/Sign_In_With_Google"
                app:backgroundTint="@null"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="310dp">

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/text_style_b25"

                    android:text="Or" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:background="@color/black" />

            </LinearLayout>

            <EditText
                android:id="@+id/emailEditText"
                style="@style/edit_text_style"
                android:layout_marginTop="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_mail_fill0_wght400_grad0_opsz48"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/email"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/passEditText"
                    style="@style/edit_text_style"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

<!--                <ImageView-->
<!--                    android:id="@+id/showBtn"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="@dimen/_10sdp"-->
<!--                    android:src="@drawable/ic_baseline_remove_red_eye_24"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/passEditText"-->
<!--                    app:layout_constraintEnd_toEndOf="@+id/passEditText"-->
<!--                    app:layout_constraintTop_toTopOf="@+id/passEditText" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>



            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passEditText">

                <TextView
                    android:id="@+id/forgotPassBtnId"
                    style="@style/text_style_g12"
                    android:text="@string/forgotten_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />

                <Button
                    android:id="@+id/signIntBtnId"
                    style="@style/primary_btn_style"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:text="@string/sign_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_weight="1"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <TextView

                    style="@style/text_style_g12"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/signUpBtnId"
                    style="@style/text_style_g12"
                    android:paddingStart="5dp"
                    android:text="@string/sign_up" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/dark_yellow"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>
