<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_green">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:layout_weight=".25"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    style="@style/text_style_w25"
                    android:layout_weight="1"
                    android:text="@string/slogan"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:src="@drawable/ic_loginvec" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/square_shape"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/text_style_b25"
                    android:textStyle="bold"
                    android:text="@string/sign_up"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/nameEditText"
                    style="@style/edit_text_style"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_weight=".5"
                    android:drawableStart="@drawable/ic_baseline_person_outline_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/name"
                    android:textCursorDrawable="@drawable/color_cursor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/edit_text_style"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:drawableStart="@drawable/ic_mail_fill0_wght400_grad0_opsz48"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:layout_weight=".5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.68"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_marginTop="@dimen/_12sdp">

                    <EditText
                        android:id="@+id/passEditText"
                        style="@style/edit_text_style"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="8dp"
                        android:hint="@string/pass"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:inputType="textPassword"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/showBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_baseline_remove_red_eye_24"
                        app:layout_constraintBottom_toBottomOf="@+id/passEditText"
                        app:layout_constraintEnd_toEndOf="@+id/passEditText"
                        app:layout_constraintTop_toTopOf="@+id/passEditText" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passEditText">

                    <Button
                        android:id="@+id/cancelBtnId"
                        style="@style/primary_btn_style"

                        android:text="@string/cancel"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText2" />

                    <Button
                        android:id="@+id/signUpBtnId"
                        style="@style/primary_btn_style"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/sign_up"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText2" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <TextView

                        style="@style/text_style_g12"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/signIntBtnIdInBtnId"
                        style="@style/text_style_g12"
                        android:paddingStart="5dp"
                        android:text="@string/sign_in" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminateTint="@color/dark_yellow"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>