<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_green"
        tools:context=".presentation.language.LanguageFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/language_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:src="@drawable/on_boarding1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_55sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_55sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/language_screen"
                android:textColor="@color/gray"
                android:textSize="@dimen/_24ssp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_287sdp"
                android:layout_height="@dimen/_218sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_lang" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/choose_lang"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:layout_weight="1"
                    android:id="@+id/btnEnglish"
                    android:textSize="@dimen/_13ssp"
                    android:padding="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textColor="@color/white"
                    style="@style/primary_btn_style"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:textSize="@dimen/_13ssp"
                    android:layout_weight="1"
                    android:id="@+id/btnArabic"
                    android:padding="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="@color/dark_green"
                    android:backgroundTint="@color/dark_yellow"
                    style="@style/primary_btn_style"
                    android:textAllCaps="false" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

</layout>